[project]
name = "vrelease-bin"
version = "0.4.0"
description = "binary wrapper for vrelease - a kiss solution to easily create project releases"
readme = "README.md"
license = { text = "CC0-1.0" }
authors = [
  { name = "Caian Ertl", email = "hi@caian.org" }
]
requires-python = ">=3.8"
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
]

[project.urls]
Homepage = "https://github.com/vrelease/py-wrapper"
Repository = "https://github.com/vrelease/py-wrapper"

[project.scripts]
vrelease = "vrelease:main"

[dependency-groups]
dev = [
  "black==24.4.2",
  "jedi==0.19.2",
  "pylint==3.3.9",
  "requests==2.31.0",
  "toml==0.10.2",
]

[tool.hatch.build]
include = [
  "icon.svg",
  "LICENSE",
  "SHASUM512",
  "vrelease/**",
]

[tool.hatch.build.targets.wheel]
packages = ["vrelease"]

[build-system]
requires = ["hatchling>=1.27.0,<1.28.0"]
build-backend = "hatchling.build"
